ajout utils_nettoyage

--- a/projet-Khamis_Nistor.ipynb
+++ b/projet-Khamis_Nistor.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "64e0796c-a140-4bbf-a11a-58f40b9e0497",
    "metadata": {},
    "outputs": [
@@ -177,6 +177,9 @@
     "# importation de utils\n",
     "from iads import utils as ut\n",
     "\n",
+    "# importation de utils_nettoyage\n",
+    "from iads import utils_nettoyage as net\n",
+    "\n",
     "# importation de evaluation\n",
     "from iads import evaluation as ev\n",
     "\n",
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "49b32889",
    "metadata": {},
    "outputs": [
@@ -316,7 +319,7 @@
        "[18846 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,28 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "631b3ea1",
+   "execution_count": 18,
+   "id": "4abe6adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        10\n",
-       "1         3\n",
-       "2        17\n",
-       "3         3\n",
-       "4         4\n",
-       "         ..\n",
-       "18841    13\n",
-       "18842    12\n",
-       "18843     3\n",
-       "18844     1\n",
-       "18845     7\n",
-       "Name: target, Length: 18846, dtype: int64"
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "9462a8e5-061c-41ae-ad3e-16a95d84db64",
    "metadata": {},
    "outputs": [
@@ -465,7 +458,7 @@
        "[198 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,41 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3ce8c834-0eed-4b53-a7b2-1a821ca68b9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import string\n",
-    "\n",
-    "def nettoyage(chaine):\n",
-    "    chaine_mod = \"\"  # On crée une chaîne vide pour stocker le texte nettoyé\n",
-    "\n",
-    "    # On parcourt chaque caractère de la chaîne\n",
-    "    for c in chaine:\n",
-    "        # Si le caractère est une ponctuation (mais PAS l'apostrophe), on le remplace par un espace\n",
-    "        if c in string.punctuation and c != \"'\":\n",
-    "            chaine_mod += \" \"\n",
-    "        else:\n",
-    "            # Sinon, on ajoute le caractère en minuscule à la chaîne finale\n",
-    "            chaine_mod += c.lower()\n",
-    "\n",
-    "    return chaine_mod  # On retourne la chaîne nettoyée\n",
-    "\n",
-    "def text2vect(chaine, mots_inutiles):\n",
-    "    chaine_nettoye = nettoyage(chaine)  # On nettoie la chaîne avec la fonction précédente\n",
-    "\n",
-    "    mots = chaine_nettoye.split()  # On découpe la chaîne en mots (liste de tokens)\n",
-    "\n",
-    "    # On filtre les mots : on garde seulement ceux qui NE SONT PAS dans la liste des mots inutiles\n",
-    "    mots_filtres = [mot for mot in mots if mot not in mots_inutiles]\n",
-    "\n",
-    "    return mots_filtres  # On retourne la liste des mots utiles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "a48287b9-4508-4318-b14f-e0a12d4d1ec4",
    "metadata": {},
    "outputs": [],
@@ -526,7 +485,7 @@
     "for message in newsgroups_df['messages']:\n",
     "    \n",
     "    #Nettoyer et transformer le message en liste de mots utiles\n",
-    "    mots = text2vect(str(message), stopwords_list)\n",
+    "    mots = net.text2vect(str(message), stopwords_list)\n",
     "    \n",
     "    #Ajouter la liste de mots (tokens) à la nouvelle colonne\n",
     "    lesmots_colonne.append(mots)\n",
@@ -537,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "64e26ade-5c05-43d1-9e10-f4767dd4cce1",
    "metadata": {},
    "outputs": [
@@ -669,7 +628,7 @@
        "[18846 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
