--- a/projet-Khamis_Nistor.ipynb
+++ b/projet-Khamis_Nistor.ipynb
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a15f0f8",
+   "id": "29951d9d",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5c1ad754",
+   "id": "2874c922",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9ddf9254",
+   "id": "93815356",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3df7cd75",
+   "id": "f4f79a08",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "96b7b72e",
+   "id": "ed654924",
    "metadata": {},
    "outputs": [
     {
@@ -1086,6 +1086,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4d7ccb33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.unique(df_sans_stopwords['target']))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5cabf183-5055-4a78-a485-34e57e33ad1d",
    "metadata": {},
@@ -1123,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7e384d38",
+   "id": "d0189cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "06e88eca-bf64-474c-b6b7-035305883fa5",
    "metadata": {},
    "outputs": [
@@ -1152,14 +1170,14 @@
    "source": [
     "#bag of words binaire - sans stopwords\n",
     "vect_sans_binaire = CountVectorizer(binary=True, max_features=50_000)  # version binaire + limite\n",
-    "X_sans_bin = vect_sans_binaire.fit_transform(textes_sans_stopwords)\n",
+    "X_sans_bin = vect_sans_binaire.fit_transform(textes_sans_stopwords).toarray()\n",
     "print(X_sans_bin.shape)  # (nombre de documents, nombre de mots retenus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5a3a5d52",
+   "execution_count": 31,
+   "id": "9d2256e2",
    "metadata": {},
    "outputs": [
     {
@@ -1173,33 +1191,56 @@
    "source": [
     "#bag of words binaire - avec stopwords\n",
     "vect_avec_binaire = CountVectorizer(binary=True, max_features=50_000)  # version binaire + limite\n",
-    "X_avec_bin = vect_avec_binaire.fit_transform(textes_avec_stopwords)\n",
+    "X_avec_bin = vect_avec_binaire.fit_transform(textes_avec_stopwords).toarray()\n",
     "print(X_avec_bin.shape)  # (nombre de documents, nombre de mots retenus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "id": "d6a958bd-d6cd-45c3-8f73-a1d7d039d8ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
    "source": [
     "#bag of words avec comptage - \n",
     "\n",
     "\n",
     "#sans stopwords\n",
     "vect_sans_count = CountVectorizer(max_features=50_000)  # version limite\n",
-    "X_sans_count = vect_sans_count.fit_transform(textes_sans_stopwords)\n",
+    "X_sans_count = vect_sans_count.fit_transform(textes_sans_stopwords).toarray()\n",
     "\n",
     "#avec stopwords\n",
     "vect_avec_count = CountVectorizer(max_features=50_000)  # version limite\n",
-    "X_avec_count = vect_avec_count.fit_transform(textes_avec_stopwords)"
+    "X_avec_count = vect_avec_count.fit_transform(textes_avec_stopwords).toarray()\n",
+    "print(X_sans_count)\n",
+    "print(X_avec_count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "c2a35596",
+   "execution_count": 39,
+   "id": "14bc11fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,6 +1254,14 @@
     "vect_sans_tfidf = TfidfVectorizer(max_features=50_000)\n",
     "X_sans_tfidf = vect_sans_tfidf.fit_transform(textes_sans_stopwords)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "272b8f29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
